<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.RegisterActivity">


    <TextView
        android:id="@+id/LumosDisplay"
        android:layout_width="251dp"
        android:layout_height="61dp"
        android:fadeScrollbars="true"
        android:gravity="center"
        android:text="@string/lumos"
        android:textColor="#F7B90F"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />

    <TextView
        android:id="@+id/profileNameEditText"
        android:layout_width="277dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:ems="12"
        android:gravity="center"
        android:hint="@string/registerNameHint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336" />

    <TextView
        android:id="@+id/profileEmailEditText"
        android:layout_width="277dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:ems="12"
        android:gravity="center"
        android:hint="@string/loginEmailHint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.448" />

    <TextView
        android:id="@+id/profilePhoneEditText"
        android:layout_width="277dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:ems="12"
        android:gravity="center"
        android:hint="@string/registerPhoneHint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.563" />


</androidx.constraintlayout.widget.ConstraintLayout>